Ajuste responsive en Login

--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -63,7 +63,7 @@
 
 
         <!-- Botón de Entrar -->
-        <button type="submit" class="btn btn-primary w-100" [disabled]="loginForm.invalid">
+        <button type="submit" class="btn btn-primary w-100 btn-ingresar" [disabled]="loginForm.invalid">
           Entrar
         </button>
 
