Ajustes responsives en modulos pre Login

--- a/src/app/view/forgot-password/forgot-password.component.html
+++ b/src/app/view/forgot-password/forgot-password.component.html
@@ -1,36 +1,43 @@
 <div class="forgot-password-container">
-    <div class="forgot-password-background">
-      <img class="forgot-password-background-image" src="/assets/sports-background.jpeg" alt="Fondo de Deportes">
+  <div class="forgot-password-background">
+    <img class="forgot-password-background-image" src="/assets/sports-background.jpeg" alt="Fondo de Deportes">
+  </div>
+  <div class="forgot-password-logo-container">
+    <img class="forgot-password-logo" src="assets/apolloLogo.png" alt="APOLLO GROUP Logo" />
+    <div class="forgot-password-logo-text">
+      <div class="forgot-password-logo-title">APOLLO GROUP</div>
+      <div class="forgot-password-logo-subtitle">Academia deportiva</div>
     </div>
-    <div class="forgot-password-logo-container">
-      <img class="forgot-password-logo" src="assets/apolloLogo.png" alt="APOLLO GROUP Logo" />
-      <div class="forgot-password-logo-text">
-        <div class="forgot-password-logo-title">APOLLO GROUP</div>
-        <div class="forgot-password-logo-subtitle">Academia deportiva</div>
+  </div>
+  <div class="forgot-password-card-container">
+    <div class="forgot-password-card">
+      <div class="forgot-password-header">
+        <button class="back-button" mat-icon-button (click)="goBack()">
+          <mat-icon>arrow_back</mat-icon>
+        </button>
+        <div class="forgot-password-title">Recuperar Contraseña</div>
       </div>
-    </div>
-    <div class="forgot-password-card-container">
-      <div class="forgot-password-card">
-        <div class="forgot-password-header">
-          <button class="back-button" mat-icon-button (click)="goBack()">
-            <mat-icon>arrow_back</mat-icon>
-          </button>
-          <div class="forgot-password-title">Recuperar Contraseña</div>
+      <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()" class="forgot-password-form">
+        <div class="forgot-password-section">
+          <mat-form-field class="forgot-password-form-field" appearance="outline">
+            <mat-label>Correo Electrónico</mat-label>
+            <input matInput formControlName="email" type="email" required 
+                   placeholder="Ingrese el correo electrónico">
+            <mat-error *ngIf="isInvalidField('email')" class="lblError">
+              Por favor, ingrese un correo electrónico válido
+            </mat-error>
+          </mat-form-field>
         </div>
-        <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()" class="forgot-password-form">
-          <div class="forgot-password-section">
-            <mat-form-field class="forgot-password-form-field" appearance="outline">
-              <mat-label>Correo Electrónico</mat-label>
-              <input matInput formControlName="email" type="email" required>
-            </mat-form-field>
-          </div>
-  
-          <button class="forgot-password-button forgot-password-button-primary" mat-raised-button>Enviar</button>
-        </form>
-        <div class="forgot-password-info">
-          <p>Introduce tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.</p>
-        </div>
+
+        <button class="forgot-password-button forgot-password-button-primary" mat-raised-button type="submit"
+          [disabled]="!forgotPasswordForm.valid || isLoading">
+          <span *ngIf="!isLoading">Enviar</span>
+          <span *ngIf="isLoading">Enviando...</span>
+        </button>
+      </form>
+      <div class="forgot-password-info">
+        <p>Introduce tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.</p>
       </div>
     </div>
   </div>
-  
+</div>
