--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -54,17 +54,17 @@
 
 
 
-        <div class="form-check mb-4 form-switch">
+         <!--<div class="form-check mb-4 form-switch">
           <input type="checkbox" class="form-check-input" >
           <label class="form-check-label text-yellow" >
             Recuérdame
           </label>
-        </div>
+        </div>-->
 
 
         <!-- Botón de Entrar -->
         <button type="submit" class="btn btn-primary w-100 btn-ingresar" [disabled]="loginForm.invalid">
-          Entrar
+          Ingresar
         </button>
 
         <!-- Botón de "¿Olvidó su contraseña?" -->
