Ajuste responsive registro de usuario

--- a/src/app/view/user-register/user-register.component.html
+++ b/src/app/view/user-register/user-register.component.html
@@ -80,7 +80,7 @@
               </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6" id="email-input">
               <label class="form-label text-yellow">
                 {{ registerForm.get('isMinor')?.value
                 ? 'Correo del Representante'
