--- a/src/app/view/user-register/user-register.component.html
+++ b/src/app/view/user-register/user-register.component.html
@@ -45,7 +45,8 @@
                 ? 'Nombre y Apellido del Representante'
                 : 'Nombre y Apellido del Atleta' }}
               </label>
-              <input type="text" class="form-control" [formControl]="nameControl" placeholder="Ingrese el nombre completo">
+              <input type="text" class="form-control" [formControl]="nameControl"
+                placeholder="Ingrese el nombre completo">
               <div *ngIf="isInvalidField(registerForm.get('isMinor')?.value ? 'representativeName' : 'athleteName')"
                 class="text-danger small mt-1">
                 El nombre y apellido solo pueden contener caracteres alfabéticos.
@@ -57,7 +58,7 @@
                 ? 'Cédula del Representante'
                 : 'Cédula del Atleta' }}
               </label>
-              <input type="text" class="form-control"  [formControl]="idControl" placeholder="Ingrese la cédula">
+              <input type="text" class="form-control" [formControl]="idControl" placeholder="Ingrese la cédula">
               <div *ngIf="isInvalidField(registerForm.get('isMinor')?.value ? 'representativeId' : 'athleteId')"
                 class="text-danger small mt-1">
                 La cédula debe ser numérica y contener un máximo de 8 dígitos.
@@ -73,7 +74,8 @@
                 ? 'Teléfono del Representante'
                 : 'Teléfono del Atleta' }}
               </label>
-              <input type="tel" class="form-control" [formControl]="phoneControl" placeholder="Ingrese el número de teléfono">
+              <input type="tel" class="form-control" [formControl]="phoneControl"
+                placeholder="Ingrese el número de teléfono">
               <div *ngIf="isInvalidField(registerForm.get('isMinor')?.value ? 'representativePhone' : 'athletePhone')"
                 class="text-danger small mt-1">
                 El teléfono debe ser numérico y contener un máximo de 12 caracteres.
@@ -86,7 +88,8 @@
                 ? 'Correo del Representante'
                 : 'Correo del Atleta' }}
               </label>
-              <input type="email" class="form-control" [formControl]="emailControl" placeholder="Ingrese el correo electrónico">
+              <input type="email" class="form-control" [formControl]="emailControl"
+                placeholder="Ingrese el correo electrónico">
               <div *ngIf="isInvalidField(registerForm.get('isMinor')?.value ? 'representativeEmail' : 'athleteEmail')"
                 class="text-danger small mt-1">
                 Por favor, ingrese un correo electrónico válido.
@@ -142,6 +145,17 @@
               </div>
             </div>
           </div>
+
+          <!-- Términos y Condiciones -->
+         <!-- <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" formControlName="termsAndConditions" id="termsCheck">
+            <label class="form-check-label text-yellow" for="termsCheck">
+              Acepto los <a href="#" class="text-yellow" (click)="openTermsModal($event)">Términos y Condiciones</a>
+            </label>
+            <div *ngIf="isInvalidField('termsAndConditions')" class="text-danger small mt-1">
+              Debes aceptar los términos y condiciones para continuar.
+            </div>
+          </div>-->
 
           <!-- Botón de Registro -->
           <div class="mt-4 text-center">
