--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -15,7 +15,7 @@
       <div class="login-side-text-sport">SPORT</div>
       <div class="login-side-buttons">
         <button class="btn btn-primary" routerLink="/register">REGISTRATE</button>
-        <button class="btn btn-accent">ZONA INFORMATIVA</button>
+        <button class="btn btn-accent" href>ZONA INFORMATIVA</button>
       </div>
     </div>
     <div class="login-card">
